feat/5: 동전 변환 결과 반환